--- a/argentbank/src/App.css
+++ b/argentbank/src/App.css
@@ -6,11 +6,20 @@ html {
 	color: #2c3e50;
 }
 
-body {
+body,
+.app {
 	margin: 0;
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+}
+
+#root {
+	position: relative;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
 .main {
@@ -71,7 +80,7 @@ body {
 }
 
 .hero {
-	background-image: url('../img/bank-tree.jpeg');
+	background-image: url('./assets/img/bank-tree.jpeg');
 	background-position: 0 -50px;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -175,7 +184,7 @@ body {
 }
 
 .sign-in-icon {
-	font-size: 5rem !important;
+	font-size: 5rem;
 }
 
 .input-remember {
