--- a/argentbank/src/App.css
+++ b/argentbank/src/App.css
@@ -161,6 +161,18 @@ body,
 	font-weight: bold;
 	margin-bottom: 0.5rem;
 }
+.green-button{
+	display: block;
+	width: 100%;
+	/* padding: 8px;
+	font-size: 1.1rem; */
+	font-weight: bold;
+	margin-top: 1rem;
+	border-color: #00bc77;
+	background-color: #00bc77;
+	color: #fff;
+
+}
 
 .sign-in-button {
 	display: block;
