--- a/argentbank/src/App.css
+++ b/argentbank/src/App.css
@@ -277,6 +277,7 @@ body,
   color: #fff;
   font-weight: bold;
   padding: 10px;
+  width: 80px;
 }
 
 .header {
@@ -319,25 +320,33 @@ body,
 
 .editNameInput_container {
   display: flex;
-  flex-direction: column;
-  /* width: 20%; */
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: auto;
   margin-top: 20px;
 }
 
-.editNameInput_item {
+.editNameInput_col {
   display: flex;
-  width: 270px;
-  flex-direction: row;
+  /* width: 270px; */
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
+  margin: 0px 10px;
+  /* align-items: center; */
+  /* margin-bottom: 20px;
   background-color: #00bc77;
   padding: 5px;
-  border: 2px solid rgb(9, 93, 31);
+  border: 2px solid rgb(9, 93, 31); */
 }
-.editName-label {
-  font-size: 0.85rem;
+.editNameInput_col-left {
+  align-items: flex-end;
+}
+.editNameInput_col-right {
+  align-items: flex-start;
+}
+.editName-input {
+  margin-bottom: 10px;
+  height: 30px;
+  padding-left: 10px;
 }
